src/main/java/com/example/oqp/common/error/ErrorResponse.java
package com.example.oqp.common.error;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;

@Data
@AllArgsConstructor
@Builder
public class ErrorResponse {
    private int code;
    private String message;
}
